fix image overflow
images can overflow, but only show a scrollbar if required

--- a/doxygen-awesome.css
+++ b/doxygen-awesome.css
@@ -1329,9 +1329,9 @@ hr {
     box-shadow: var(--content-maxwidth) 0 0 0 var(--separator-color), calc(0px - var(--content-maxwidth)) 0 0 0 var(--separator-color);
 }
 
-.contents img, .contents .center, .contents center {
+.contents img, .contents .center, .contents center, .contents div.image object {
     max-width: 100%;
-    overflow: scroll;
+    overflow: auto;
 }
 
 /*
